# serde_b

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: main.yml
src/: de.rs  lib.rs  ser.rs  value.rs
